# src/backend/src/main/kotlin/com/NOSQL/NOSQL/controller/ActorController.kt
@@ -41,6 +41,8 @@ class ActorController(
         ageTo: Int?,
         weightMin: Int?,
         weightMax: Int?,
+        heightMin: Int?,
+        heightMax: Int?,
         activityYearFrom: Int?,
         activityYearTo: Int?,
         universityId: String?,
@@ -60,6 +62,8 @@ class ActorController(
             ageTo = ageTo,
             weightMin = weightMin,
             weightMax = weightMax,
+            heightMin = heightMin,
+            heightMax = heightMax,
             activityYearFrom = activityYearFrom,
             activityYearTo = activityYearTo,
             universityId = universityId,
